Add tooltip component.

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,7 +9,7 @@ $color-white: hsl(210, 46%, 95%);
 
 // * Typography
 $font-family: 'Manrope', Arial, Helvetica, sans-serif;
-$font-weights: (
+$font-weight: (
   'regular': 500,
   'bold': 700,
 );
