--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   color: map.get($color-primary, 'dark');
+  font-family: $font-family;
   font-size: $font-size-body;
   line-height: $line-height;
 }
